import { Metadata } from "@grpc/grpc-js";
import { logger } from "../util/logging.js";
import { requireBearer } from "../util/auth.js";
import { ERR } from "../util/errors.js";

export const SellerServiceImpl = {
  async GetSellerDashboard(call: any, callback: any) {
    try {
      const subject = requireBearer(call.metadata as Metadata);
      logger.info({ method: "SellerService.GetSellerDashboard", subject });
      
      const response = {
        body: {
          ok: true,
          dashboard: {
            total_orders: 0,
            total_revenue: 0,
            active_products: 0,
          },
        },
      };
      
      callback(null, response);
    } catch (e) {
      logger.error({ error: e, method: "SellerService.GetSellerDashboard" });
      callback(e as Error, null);
    }
  },

  async GetSellerProducts(call: any, callback: any) {
    try {
      const subject = requireBearer(call.metadata as Metadata);
      logger.info({ method: "SellerService.GetSellerProducts", subject });
      
      const response = {
        body: {
          ok: true,
          products: [],
        },
      };
      
      callback(null, response);
    } catch (e) {
      logger.error({ error: e, method: "SellerService.GetSellerProducts" });
      callback(e as Error, null);
    }
  },

  async PostSellerProducts(call: any, callback: any) {
    try {
      const subject = requireBearer(call.metadata as Metadata);
      const params = call.request?.body || {};
      logger.info({ method: "SellerService.PostSellerProducts", subject });
      
      const response = {
        body: {
          ok: true,
          product: {
            id: `product_${Date.now()}`,
            name: params.name || "New Product",
            created_at: new Date().toISOString(),
          },
        },
      };
      
      callback(null, response);
    } catch (e) {
      logger.error({ error: e, method: "SellerService.PostSellerProducts" });
      callback(e as Error, null);
    }
  },

  async PutSellerProductsId(call: any, callback: any) {
    try {
      const subject = requireBearer(call.metadata as Metadata);
      const params = call.request?.body || {};
      logger.info({ method: "SellerService.PutSellerProductsId", subject, productId: params.id });
      
      const response = {
        body: {
          ok: true,
          product: {
            id: params.id,
            updated_at: new Date().toISOString(),
          },
        },
      };
      
      callback(null, response);
    } catch (e) {
      logger.error({ error: e, method: "SellerService.PutSellerProductsId" });
      callback(e as Error, null);
    }
  },

  async DeleteSellerProductsId(call: any, callback: any) {
    try {
      const subject = requireBearer(call.metadata as Metadata);
      const params = call.request?.body || {};
      logger.info({ method: "SellerService.DeleteSellerProductsId", subject, productId: params.id });
      
      const response = {
        body: {
          ok: true,
          message: "Product deleted",
        },
      };
      
      callback(null, response);
    } catch (e) {
      logger.error({ error: e, method: "SellerService.DeleteSellerProductsId" });
      callback(e as Error, null);
    }
  },

  async PostSellerProductsAi(call: any, callback: any) {
    try {
      const subject = requireBearer(call.metadata as Metadata);
      logger.info({ method: "SellerService.PostSellerProductsAi", subject });
      
      const response = {
        body: {
          ok: true,
          suggestions: [],
        },
      };
      
      callback(null, response);
    } catch (e) {
      logger.error({ error: e, method: "SellerService.PostSellerProductsAi" });
      callback(e as Error, null);
    }
  },

  async PostSellerStores(call: any, callback: any) {
    try {
      const subject = requireBearer(call.metadata as Metadata);
      const params = call.request?.body || {};
      logger.info({ method: "SellerService.PostSellerStores", subject });
      
      const response = {
        body: {
          ok: true,
          store: {
            id: `store_${Date.now()}`,
            name: params.name || "New Store",
            created_at: new Date().toISOString(),
          },
        },
      };
      
      callback(null, response);
    } catch (e) {
      logger.error({ error: e, method: "SellerService.PostSellerStores" });
      callback(e as Error, null);
    }
  },

  async GetSellerStores(call: any, callback: any) {
    try {
      const subject = requireBearer(call.metadata as Metadata);
      logger.info({ method: "SellerService.GetSellerStores", subject });
      
      const response = {
        body: {
          ok: true,
          stores: [],
        },
      };
      
      callback(null, response);
    } catch (e) {
      logger.error({ error: e, method: "SellerService.GetSellerStores" });
      callback(e as Error, null);
    }
  },

  async GetSellerStoresId(call: any, callback: any) {
    try {
      const subject = requireBearer(call.metadata as Metadata);
      const params = call.request?.body || {};
      logger.info({ method: "SellerService.GetSellerStoresId", subject, storeId: params.id });
      
      const response = {
        body: {
          ok: true,
          store: {
            id: params.id,
            name: "Sample Store",
          },
        },
      };
      
      callback(null, response);
    } catch (e) {
      logger.error({ error: e, method: "SellerService.GetSellerStoresId" });
      callback(e as Error, null);
    }
  },

  async PutSellerStoresId(call: any, callback: any) {
    try {
      const subject = requireBearer(call.metadata as Metadata);
      const params = call.request?.body || {};
      logger.info({ method: "SellerService.PutSellerStoresId", subject, storeId: params.id });
      
      const response = {
        body: {
          ok: true,
          store: {
            id: params.id,
            updated_at: new Date().toISOString(),
          },
        },
      };
      
      callback(null, response);
    } catch (e) {
      logger.error({ error: e, method: "SellerService.PutSellerStoresId" });
      callback(e as Error, null);
    }
  },

  async GetSellerStore(call: any, callback: any) {
    try {
      const subject = requireBearer(call.metadata as Metadata);
      logger.info({ method: "SellerService.GetSellerStore", subject });
      
      const response = {
        body: {
          ok: true,
          store: {
            id: "default",
            name: "Default Store",
          },
        },
      };
      
      callback(null, response);
    } catch (e) {
      logger.error({ error: e, method: "SellerService.GetSellerStore" });
      callback(e as Error, null);
    }
  },

  async PutSellerStore(call: any, callback: any) {
    try {
      const subject = requireBearer(call.metadata as Metadata);
      logger.info({ method: "SellerService.PutSellerStore", subject });
      
      const response = {
        body: {
          ok: true,
          message: "Store updated",
        },
      };
      
      callback(null, response);
    } catch (e) {
      logger.error({ error: e, method: "SellerService.PutSellerStore" });
      callback(e as Error, null);
    }
  },

  async PatchSellerStoreSettings(call: any, callback: any) {
    try {
      const subject = requireBearer(call.metadata as Metadata);
      logger.info({ method: "SellerService.PatchSellerStoreSettings", subject });
      
      const response = {
        body: {
          ok: true,
          message: "Settings updated",
        },
      };
      
      callback(null, response);
    } catch (e) {
      logger.error({ error: e, method: "SellerService.PatchSellerStoreSettings" });
      callback(e as Error, null);
    }
  },

  async PostSellerAi(call: any, callback: any) {
    try {
      const subject = requireBearer(call.metadata as Metadata);
      logger.info({ method: "SellerService.PostSellerAi", subject });
      
      const response = {
        body: {
          ok: true,
          suggestions: [],
        },
      };
      
      callback(null, response);
    } catch (e) {
      logger.error({ error: e, method: "SellerService.PostSellerAi" });
      callback(e as Error, null);
    }
  },

  async PostSellerProductsWithPage(call: any, callback: any) {
    try {
      const subject = requireBearer(call.metadata as Metadata);
      logger.info({ method: "SellerService.PostSellerProductsWithPage", subject });
      
      const response = {
        body: {
          ok: true,
          product: {
            id: `product_${Date.now()}`,
            created_at: new Date().toISOString(),
          },
        },
      };
      
      callback(null, response);
    } catch (e) {
      logger.error({ error: e, method: "SellerService.PostSellerProductsWithPage" });
      callback(e as Error, null);
    }
  },
};
